# works

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  basic__elements_8hpp.html  basic__elements_8hpp__dep__incl.map  basic__elements_8hpp__dep__incl.md5  basic__elements_8hpp__incl.map  basic__elements_8hpp__incl.md5  basic__elements_8hpp_source.html  canvas_8cpp.html  canvas_8cpp__incl.map  canvas_8cpp__incl.md5  canvas_8hpp.html  canvas_8hpp__dep__incl.map  canvas_8hpp__dep__incl.md5  canvas_8hpp__incl.map  canvas_8hpp__incl.md5  canvas_8hpp_source.html  classAction-members.html  classAction.html  classActiveScreenPanel-members.html  classActiveScreenPanel.html  classActiveScreenPanel__coll__graph.map  classActiveScreenPanel__coll__graph.md5  classActiveScreenPanel__inherit__graph.map  classActiveScreenPanel__inherit__graph.md5  classBuildController-members.html  classBuildController.html  classBuildController_1_1AddingPointsController-members.html  classBuildController_1_1AddingPointsController.html  classBuildController_1_1FieldController-members.html  classBuildController_1_1FieldController.html  classBuildController__coll__graph.map  classBuildController__coll__graph.md5  classBuilderPanel-members.html  classBuilderPanel.html  classBuilderPanel__coll__graph.map  classBuilderPanel__coll__graph.md5  (+247 more)
.github/workflows/: release.yml
.github/workfolws/: release.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  concepts_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_1.js  (+44 more)
src/: CMakeLists.txt  async.cpp  basic_elements.hpp  canvas.cpp  canvas.hpp  command_interpreter.cpp  command_interpreter.hpp  command_set.hpp  compact_vector.hpp  controllers.hpp  database.cpp  database.hpp  errors.hpp  file_searcher.cpp  file_searcher.hpp  file_system.hpp  graphic_primitives.cpp  graphic_primitives.hpp  graphic_primitives_builder.cpp  graphic_primitives_builder.hpp  hash.cpp  hash.hpp  input_controller.hpp  interface.hpp  interpreter.cpp  interpreter.hpp  ip.cpp  ip.hpp  main.cpp  main_mechanism.cpp  main_mechanism.hpp  mask_filter.cpp  mask_filter.hpp  matrix.hpp  multi_comparator.cpp  multi_comparator.hpp  my_allocator.hpp  output.hpp  print_ip.hpp  server.cpp  (+3 more)
test/: CMakeLists.txt  main_test.cpp
